feat: Implement Chat AI feature and integrate into existing templates
- Added chat.html template for AI chat interface.
- Updated dashboard.html, laporan.html, pengaturan.html, and transaksi.html to include navigation links to the Chat AI feature.
- Enhanced dashboard.js, CategoryService.js, and TransactionService.js with minor code cleanups and formatting improvements.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <script>
       // Redirect to home page
-      window.location.href = "/src/templates/home.html";
+      window.location.href = "./src/templates/home.html";
     </script>
   </head>
   <body>
