--- a/404.html
+++ b/404.html
@@ -48,7 +48,7 @@
         ke halaman utama dalam beberapa detik.
       </p>
       <a
-        href="/SmartSaku/"
+        href="/src/templates/home.html"
         class="inline-block bg-blue-600 text-white px-5 py-2 rounded-lg font-medium hover:bg-blue-700 transition-colors"
       >
         Kembali ke Beranda
